# TestSpix

./: .gitmodules
TestSpix/: .gitignore  Page1.qml  Page2.qml  Page3.qml  README.md  TestSpix.pro  main.cpp  main.qml  readme.md  statechart.scxml  viewcontroller.cpp  viewcontroller.h
TestSpix/spix-script/: pyproject.toml  record.py  test.py
TestSpix/spix_script/: pyproject.toml
TestSpix/spix_script/script_propertyTreeCheck/: qml_tree_utils.py  record.py  test.py
TestSpix/spix_script/script_stateScreenshotCheck/: record.py  test.py
