[project]
name = "testspix"
version = "0.1.0"
dependencies = [
    "scikit-image",
    "numpy",
]

[project.optional-dependencies]
dev = ["pytest", "black"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = []  # Don't install any packages, just dependencies